RESOLVED FIXED50725
REGRESSION (r72052): “Search” placeholder in MobileMe mail is positioned too high
https://bugs.webkit.org/show_bug.cgi?id=50725
Summary REGRESSION (r72052): “Search” placeholder in MobileMe mail is positioned too ...
Adele Peterson
Reported 2010-12-08 17:02:10 PST
“Search” placeholder in MobileMe mail is positioned too high
Attachments
patch (34.86 KB, patch)
2010-12-08 17:09 PST, Adele Peterson
darin: review+
Adele Peterson
Comment 1 2010-12-08 17:09:34 PST
Adele Peterson
Comment 2 2010-12-08 17:10:39 PST
Comment on attachment 75990 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=75990&action=review > WebCore/rendering/RenderTextControlSingleLine.cpp:1132 > + return innerRenderer->y(); I hope this isn't too simplistic.
Darin Adler
Comment 3 2010-12-08 17:12:57 PST
Comment on attachment 75990 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=75990&action=review >> WebCore/rendering/RenderTextControlSingleLine.cpp:1132 >> + return innerRenderer->y(); > > I hope this isn't too simplistic. The best way to answer that question is add more test cases.
Adele Peterson
Comment 4 2010-12-08 17:25:06 PST
I'm going to add a few more tests, with at least one that covers transformed controls. (In reply to comment #3) > (From update of attachment 75990 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=75990&action=review > > >> WebCore/rendering/RenderTextControlSingleLine.cpp:1132 > >> + return innerRenderer->y(); > > > > I hope this isn't too simplistic. > > The best way to answer that question is add more test cases.
Adele Peterson
Comment 5 2010-12-08 17:36:28 PST
Committed revision 73572.
WebKit Review Bot
Comment 6 2010-12-09 02:22:22 PST
http://trac.webkit.org/changeset/73572 might have broken GTK Linux 32-bit Release
Note You need to log in before you can comment on or make changes to this bug.