WebCore: Fix for https://bugs.webkit.org/show_bug.cgi?id=50725 <rdar://problem/8694972> REGRESSION (r72052): "Search" placeholder in MobileMe mail is positioned too high

Reviewed by Darin Adler.

Test: fast/forms/placeholder-position.html

Since we center the inner text element for single line text controls,
we should ask the subclass to give us the y offset instead of trying to calculate it in the RenderTextControl class.

* rendering/RenderTextControl.cpp: (WebCore::RenderTextControl::paintPlaceholder):
* rendering/RenderTextControl.h:
* rendering/RenderTextControlMultiLine.cpp: (WebCore::RenderTextControlMultiLine::textBlockInsetTop):
* rendering/RenderTextControlMultiLine.h:
* rendering/RenderTextControlSingleLine.cpp: (WebCore::RenderTextControlSingleLine::textBlockInsetTop):
* rendering/RenderTextControlSingleLine.h:

LayoutTests: Test for https://bugs.webkit.org/show_bug.cgi?id=50725
<rdar://problem/8694972> REGRESSION (r72052): "Search" placeholder in MobileMe mail is positioned too high

Reviewed by Darin Adler.

* fast/forms/placeholder-position.html: Added.
* platform/mac/fast/forms/placeholder-position-expected.checksum: Added.
* platform/mac/fast/forms/placeholder-position-expected.png: Added.
* platform/mac/fast/forms/placeholder-position-expected.txt: Added.



Canonical link: https://commits.webkit.org/63981@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73572 268f45cc-cd09-0410-ab3c-d52691b4dbfc