WebCore/rendering/RenderTextControlMultiLine.cpp
@@ -147,4 +147,14 @@ int RenderTextControlMultiLine::textBlockInsetRight() const
     return inset;
 }
 
+int RenderTextControlMultiLine::textBlockInsetTop() const
+{
+    int inset = borderTop() + paddingTop();
+    if (HTMLElement* innerText = innerTextElement()) {
+        if (RenderBox* innerTextRenderer = innerText->renderBox())
+            inset += innerTextRenderer->paddingTop();
+    }
+    return inset;
+}
+    
 }
